allow declaring hints for choices
Previously we add a hint param to our custom form fields for the overall
field. In the case of choice fields, we also want to  be able to add hints
to the individual choices.

This gets passed as the hint param within in params.items.

--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/checkboxes.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/checkboxes.jinja
@@ -15,7 +15,10 @@
     "exclusive": unbound_field.is_exclusive(value),
     "conditional": {
       "html": conditional_html
-    } if conditional_html else undefined
+    } if conditional_html else undefined,
+    "hint": {
+      "text": unbound_field.choice_hints.get(value)
+    } if value in unbound_field.choice_hints else undefined
   }] %}
   {% set divider = field.get_divider_after(value) %}
   {% if divider %}
