--- a/manage_breast_screening/core/jinja2/layout-appointment.jinja
+++ b/manage_breast_screening/core/jinja2/layout-appointment.jinja
@@ -30,6 +30,22 @@
 
         <div class="app-header__status-tag">
         {{ app_appointment_status(presented_appointment) }}
+
+        <ul class="nhsuk-list">
+          {% if not appointment.current_status.is_screened %}
+            <li>
+              <a href="#">Cancel or reschedule appointment</a>
+            </li>
+          {% endif %}
+          <li>
+            <a href="{{ presented_appointment.special_appointment_url }}"> 
+              {% if presented_appointment.can_be_made_special %} Make special appointment
+              {% else %} Change special appointment details
+              {% endif %}
+            </a>
+          </li>
+        </ul>
+
         <p class="nhsuk-u-margin-bottom-2">
             {{ app_check_in(
             presented_appointment,
