text-color CSS Changes
- Change text-color to text-colour throughout codebase

--- a/manage_breast_screening/assets/sass/components/_secondary-navigation.scss
+++ b/manage_breast_screening/assets/sass/components/_secondary-navigation.scss
@@ -95,5 +95,5 @@ $govuk-spacing4: 20px;
 
 .app-secondary-navigation__list-item--current .app-secondary-navigation__link:link,
 .app-secondary-navigation__list-item--current .app-secondary-navigation__link:visited {
-  color: $nhsuk-text-color;
+  color: $nhsuk-text-colour;
 }
