--- a/manage_breast_screening/mammograms/jinja2/mammograms/check_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/check_information.jinja
@@ -3,6 +3,7 @@
 {% from "nhsuk/components/summary-list/macro.jinja" import summaryList %}
 {% from "components/participant-details/summary_list_rows.jinja" import ethnicity_html %}
 {% from "mammograms/check_information/images_taken_card.jinja" import images_taken_card %}
+{% from "mammograms/check_information/medical_information_card.jinja" import medical_information_card %}
 
 {% set active_workflow_step = 'CHECK_INFORMATION' %}
 
@@ -28,6 +29,7 @@
 
   {% endcall %}
 
+  {{ medical_information_card(presented_medical_information) }}
   {{ images_taken_card(presented_images) }}
 {% endblock %}
 
