--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -5,6 +5,7 @@
 // Components that are not in the NHS.UK frontend library
 @forward "components/button";
 @forward "components/count";
+@forward "components/icon";
 @forward "components/appointment-status";
 @forward "components/secondary-navigation";
 @forward "components/card-with-status";
