--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -6,6 +6,7 @@
 @forward "components/button";
 @forward "components/count";
 @forward "components/icon";
+@forward "components/stepper-input";
 @forward "components/appointment-status";
 @forward "components/secondary-navigation";
 @forward "components/card-with-status";
