Use workflow layout for multiple images information page

--- a/manage_breast_screening/mammograms/jinja2/mammograms/multiple_images_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/multiple_images_information.jinja
@@ -1,5 +1,7 @@
-{% extends "layout-form.jinja" %}
+{% extends "workflow_step.jinja" %}
 {% from "nhsuk/components/button/macro.jinja" import button %}
+
+{% set active_workflow_step = 'TAKE_IMAGES' %}
 
 {% block form %}
   <p>You have indicated multiple images were needed for some views.</p>
