fix stepper input rendering error
The logic for defaulting the value of `disabled` param previously
assumed that `value` was an integer. Actually it can
be an arbitrary string, so we need to coerce it to an integer here.

--- a/manage_breast_screening/core/jinja2/components/stepper-input/template.jinja
+++ b/manage_breast_screening/core/jinja2/components/stepper-input/template.jinja
@@ -36,7 +36,7 @@
     "aria-controls": id,
     "aria-describedby": id ~ "-label",
     "disabled": {
-      "value": params.min is defined and value <= params.min,
+      "value": params.min is defined and value | int(default=1000000) <= params.min,
       "optional": true
     },
     "hidden": {
@@ -58,7 +58,7 @@
     "aria-controls": id,
     "aria-describedby": id ~ "-label",
     "disabled": {
-      "value": params.max is defined and value >= params.max,
+      "value": params.max is defined and value | int(default=0) >= params.max,
       "optional": true
     },
     "hidden": {
