fix 0-values defaulting to empty string
The value() of an integer field is an integer, and 0 is falsey,
so `value() or ""` incorrectly cooerces 0s to empty string.

--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/character-count.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/character-count.jinja
@@ -15,7 +15,7 @@
     "maxwords": unbound_field.max_words,
     "id": field.auto_id,
     "name": field.html_name,
-    "value": field.value() or "",
+    "value": "" if field.value() is none else field.value(),
     "classes": unbound_field.classes if unbound_field.classes,
     "rows": widget.attrs.pop("rows", none),
     "cols": widget.attrs.pop("cols", none),
