--- a/manage_breast_screening/nhsuk_forms/jinja2/forms/textarea.jinja
+++ b/manage_breast_screening/nhsuk_forms/jinja2/forms/textarea.jinja
@@ -12,7 +12,7 @@
     } if unbound_field.hint,
     "id": field.auto_id,
     "name": field.html_name,
-    "value": field.value() or "",
+    "value": "" if field.value() is none else field.value(),
     "classes": unbound_field.classes if unbound_field.classes,
     "rows": widget.attrs.pop("rows", none),
     "cols": widget.attrs.pop("cols", none),
