Display DICOM thumbnails for an appointment

--- a/manage_breast_screening/assets/sass/main.scss
+++ b/manage_breast_screening/assets/sass/main.scss
@@ -13,6 +13,7 @@
 @forward "components/special-appointment-banner";
 @forward "components/nested-info";
 @forward "components/workflow-steps";
+@forward "components/mammogram-thumbnail";
 
 $color_app-dark-blue: #00386e;
 
