--- a/manage_breast_screening/mammograms/jinja2/mammograms/take_images.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/take_images.jinja
@@ -2,6 +2,32 @@
 
 {% set active_workflow_step = 'TAKE_IMAGES' %}
 
+{% block step_content %}
+<div class="nhsuk-u-margin-bottom-6">
+  {% if images %}
+    <div class="nhsuk-grid-row">
+      {% for image in images %}
+        <div class="nhsuk-grid-column-one-quarter nhsuk-u-margin-bottom-4">
+          <div class="app-mammogram-thumbnail">
+            {% if image.image_file %}
+              <img src="{{ image.image_file.url }}" alt="Mammogram image" class="app-mammogram-thumbnail__image">
+            {% else %}
+              <div class="app-mammogram-thumbnail__placeholder">
+                <span>Processing...</span>
+              </div>
+            {% endif %}
+          </div>
+        </div>
+      {% endfor %}
+    </div>
+  {% else %}
+    <p class="nhsuk-body-s nhsuk-u-secondary-text-color">
+      Images will appear here as they are received from the modality. Refresh the page to see new images.
+    </p>
+  {% endif %}
+</div>
+{% endblock %}
+
 {% block form %}
 {% do form.standard_images.add_divider_after("NO_ADD_ADDITIONAL", "or") %}
 {{ form.standard_images.as_field_group() }}
