Add stale form detection to multiple images information page
- A hidden series_fingerprint field is embedded in the form on render
- On POST the view compares it against current DB state to detect if
  the underlying series have changed
- If stale, the user is redirected to add image details

--- a/manage_breast_screening/mammograms/jinja2/mammograms/multiple_images_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/multiple_images_information.jinja
@@ -4,6 +4,7 @@
 {% set active_workflow_step = 'TAKE_IMAGES' %}
 
 {% block form %}
+  {{ form.series_fingerprint }}
   <p>You have indicated multiple images were needed for some views.</p>
 
   {% for series, fields in form.get_series_field_groups() %}
