--- a/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/record_medical_information.jinja
@@ -15,6 +15,20 @@
 
 {% block step_content %}
 
+{% set complete_all_button %}
+  <div class="nhsuk-form-group">
+    <form method="post">
+      {{ csrf_input }}
+      {{ button({
+        "text": "Complete all and continue",
+        "classes": "nhsuk-u-margin-bottom-4"
+      }) }}
+    </form>
+  </div>
+{% endset %}
+
+{{ complete_all_button }}
+
 {% call card_with_status(
   section=sections.MAMMOGRAM_HISTORY,
   anchor=presenter.get_anchor(sections.MAMMOGRAM_HISTORY),
@@ -193,14 +207,9 @@
   {% endif %}
 {% endcall %}
 
+{{ complete_all_button }}
+
 {% endblock %}
 
 {% block wizard_form %}
-  <form method="post">
-    {{ csrf_input }}
-    {{ button({
-      "text": "Complete all and continue",
-      "classes": "nhsuk-u-margin-bottom-4"
-    }) }}
-  </form>
 {% endblock %}
