Add notes for reader field to multiple images information page
Make the "Notes for reader" field from the image details page also
appear on the multiple images information form, allowing users to edit
it at that stage. The form's update method now accepts a StudyService
to persist changes to additional_details via an audited update.

--- a/manage_breast_screening/mammograms/jinja2/mammograms/multiple_images_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/multiple_images_information.jinja
@@ -21,4 +21,6 @@
 
     {{ form[fields.repeat_type].as_field_group() }}
   {% endfor %}
+
+  {{ form.additional_details.as_field_group() }}
 {% endblock %}
