Resume appointment at appropriate step

--- a/manage_breast_screening/clinics/jinja2/clinics/show.jinja
+++ b/manage_breast_screening/clinics/jinja2/clinics/show.jinja
@@ -111,7 +111,7 @@
           request.user,
           presented_appointment,
           resume_appointment_url=url(
-            "mammograms:start_appointment",
+            "mammograms:resume_appointment",
             kwargs={
               'pk': presented_appointment.pk,
             }
