--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/mastectomy_or_lumpectomy_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/mastectomy_or_lumpectomy_history_card.jinja
@@ -17,7 +17,8 @@ paragraph %}
           "items": [
             {
               "text": presented_item.change_link.text,
-              "href": presented_item.change_link.href
+              "href": presented_item.change_link.href,
+              "classes": "nhsuk-link--no-visited-state",
             }
           ]
         }
