--- a/manage_breast_screening/participants/jinja2/components/participant-details/participant_details.jinja
+++ b/manage_breast_screening/participants/jinja2/components/participant-details/participant_details.jinja
@@ -12,6 +12,7 @@
         {
           "href": ethnicity_details_url,
           "text": "Change",
+          "classes": "nhsuk-link--no-visited-state",
           "visuallyHiddenText": "ethnicity"
         }
       ]
