--- a/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/show/appointment_details.jinja
@@ -52,7 +52,8 @@
            "items": [
              {
                "text": "Change",
-               "href": presented_appointment.special_appointment_url
+               "href": presented_appointment.special_appointment_url,
+               "classes": "nhsuk-link--no-visited-state",
              }
            ]
          },
