Use blue heading for panels on check info page

--- a/manage_breast_screening/mammograms/jinja2/mammograms/check_information.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/check_information.jinja
@@ -11,7 +11,8 @@
   <p>Before concluding this appointment, confirm that the information recorded is correct.</p>
 
   {% call card({
-  "heading": "Personal Information"
+  "heading": "Personal Information",
+  "feature": true
   }) %}
 
   {{ summaryList({
