--- a/manage_breast_screening/mammograms/jinja2/mammograms/check_information/images_taken_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/check_information/images_taken_card.jinja
@@ -15,7 +15,8 @@
 
 {% macro images_taken_card(presented_images) %}
   {% call card({
-    "heading": presented_images.title
+    "heading": presented_images.title,
+    "feature": true
   }) %}
     {{ summaryList({
       "rows": [
