--- a/manage_breast_screening/mammograms/jinja2/mammograms/check_information/medical_information_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/check_information/medical_information_card.jinja
@@ -15,7 +15,8 @@
 
 {% macro medical_information_card(presented_medical_information) %}
   {% call card({
-    "heading": "Medical information"
+    "heading": "Medical information",
+    "feature": true
   }) %}
     {{ summaryList({
       "rows": [
