--- a/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_augmentation_history_card.jinja
+++ b/manage_breast_screening/mammograms/jinja2/mammograms/medical_information/medical_history/cards/breast_augmentation_history_card.jinja
@@ -1,7 +1,7 @@
 {% from "components/nested-info-card/macro.jinja" import app_nested_info_card %}
 {% from "mammograms/medical_information/medical_history/cards/macros.jinja" import list_with_default, item_with_details, paragraph %}
 
-{% macro breast_augmentation_history_card(breast_augmentation_history) %}
+{% macro breast_augmentation_history_card(breast_augmentation_history, read_only=false) %}
   {% if breast_augmentation_history %}
   <section>
   {% endif %}
@@ -20,7 +20,7 @@
               "classes": "nhsuk-link--no-visited-state",
             }
           ]
-        }
+        } if not read_only else none
       },
       "headingLevel": 4,
       "rows": [
